--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -26,8 +26,11 @@
     }
     .nav_footer {
         text-transform: uppercase;
-        font-size: 14px;
+        font-size: 10px;
         text-align: center;
+        @include mn1400 {
+            font-size: 14px;
+        }
         .menu-item {
             display: block;
             @include mn600 {
@@ -62,7 +65,8 @@
         }
         &-text {
             font-size: 12px;
-            @include mn550 {
+            margin-right: 5px;
+            @include mn1400 {
                 margin-right: 25px;
             }
         }
