--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -5,6 +5,9 @@ body {
     min-width: 320px; // max-width: 1920px;
     // margin: 0 auto;
 }
+body.fullpage:not(.h_less600) {
+    overflow: hidden;
+}
 
 hr.bold {
     border: 1px solid $grey;
