--- a/css/_tpl-portfolio.scss
+++ b/css/_tpl-portfolio.scss
@@ -12,22 +12,15 @@
         display: inline-block;
         vertical-align: top;
         transition: all .2s ease-out;
-        max-width: 350px;
-        width: 100%;
-        height: 250px;
         position: relative;
-        @include mn550 {
-            max-width: none;
-            width: 50%;
-            height: 0;
-            padding-bottom: 40%;
-        }
+        width: 50%;
+        height: 0;
+        padding-bottom: 50%;
         @include mn768 {
-            width: 33.33%;
-            padding-bottom: 30%;
+            width: 25%;
+            padding-bottom: 25%;
         }
         @include mn1200 {
-            width: 25%;
             padding-bottom: 23%;
         }
         @include mn1920 {
@@ -42,13 +35,8 @@
         right: 0;
         top: 0;
         bottom: 0;
-        padding: 3%;
-        display: -webkit-flex;
-        display: -moz-flex;
-        display: -ms-flex;
-        display: -o-flex;
-        display: flex;
-        align-items: center;
+        padding: 5%;
+        text-align: center;
         overflow: hidden;
         &:hover {
             .portfolio__caption {
@@ -71,6 +59,13 @@
             background: black;
             transition: all .3s 0s;
         }
+        &:after {
+            content: '';
+            width: 0;
+            height: 100%;
+            display: inline-block;
+            vertical-align: middle;
+        }
     }
     &__caption {
         position: absolute;
@@ -89,16 +84,13 @@
         overflow: hidden;
     }
     &__img {
-        display: block; // flex: 0 0 auto;
-        margin: auto;
-        max-width: 70%;
-        max-height: 70%;
+        display: inline-block;
+        vertical-align: middle;
     }
 }
 
 .h_less600 .portfolio__img {
     width: auto;
-    max-height: 100%;
 }
 
 .portfolio-filter {
@@ -122,6 +114,7 @@
                 position: absolute;
                 width: 35px;
                 top: 23px;
+                left: 8px;
                 transform: rotate(-45deg);
                 &+span {
                     transform: rotate(45deg);
@@ -139,6 +132,10 @@
         position: absolute;
         left: 0;
         right: 0;
+        display: -webkit-flex;
+        display: -moz-flex;
+        display: -ms-flex;
+        display: -o-flex;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -188,14 +185,8 @@
 }
 
 .portfolio__item-sizer {
-    width: 100%;
-    @include mn550 {
-        width: 50%;
-    }
+    width: 50%;
     @include mn768 {
-        width: 33.33%;
-    }
-    @include mn1400 {
         width: 25%;
     }
     @include mn1920 {
@@ -205,21 +196,10 @@
 
 .portfolio__item_all {
     @extend .portfolio__item-sizer;
-    max-width: none;
-    height: 200px;
-    padding-bottom: 0;
     transition: none;
-    @include mn1400 {
-        height: 250px;
-    }
     @include mn1600 {
         height: 300px;
     }
-}
-
-.portfolio__item_all img {
-    max-width: 70%;
-    max-height: 70%;
 }
 
 .case {
