--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -251,6 +251,7 @@
 
 .form-get-offer {
     width: 300px;
+    max-width: 100%;
     padding: 20px;
     overflow: hidden;
     position: absolute;
