--- a/css/_tpl-sliders.scss
+++ b/css/_tpl-sliders.scss
@@ -52,8 +52,8 @@
         font-size: 16px;
         line-height: 1.5;
         margin-bottom: 30px;
+        text-align: center;
     }
-    &__logo {}
 }
 
 .b-slider-logo {
