--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -111,7 +111,8 @@ img {
         }
         &_portfolio {
             max-width: none;
-            padding: 0;
+            padding-top: 0;
+            padding-bottom: 0;
         }
     }
     &__body {
