--- a/css/main.css
+++ b/css/main.css
@@ -4074,10 +4074,6 @@ img {
     @media (min-width: 1200px) {
       .portfolio__item {
         padding-bottom: 23%; } }
-    @media (min-width: 1921px) {
-      .portfolio__item {
-        padding-bottom: 0;
-        height: 355px; } }
   .portfolio__link {
     position: absolute;
     left: 0;
@@ -4197,7 +4193,7 @@ img {
   font-weight: 700;
   text-transform: uppercase; }
   .portfolio-menu__link {
-    cursor: pointer;
+    display: block;
     margin-top: 10px; }
     @media (min-width: 550px) {
       .portfolio-menu__link {
@@ -4207,21 +4203,6 @@ img {
       color: #999; }
     .portfolio-menu__link:hover {
       color: #f8615a; }
-
-.portfolio__item-sizer, .portfolio__item_all {
-  width: 50%; }
-  @media (min-width: 768px) {
-    .portfolio__item-sizer, .portfolio__item_all {
-      width: 25%; } }
-  @media (min-width: 1921px) {
-    .portfolio__item-sizer, .portfolio__item_all {
-      width: 300px; } }
-
-.portfolio__item_all {
-  transition: none; }
-  @media (min-width: 1600px) {
-    .portfolio__item_all {
-      height: 300px; } }
 
 .case {
   margin: 20px 0 40px; }
