--- a/css/_header.scss
+++ b/css/_header.scss
@@ -22,7 +22,7 @@
         background: white;
         box-shadow: 0px 0px 1px grey;
         margin: 0;
-        text-align: left;
+        text-align: center;
         text-transform: uppercase;
         font-size: 15px;
         font-weight: 700;
@@ -64,7 +64,6 @@
     #menu-item-106 {
         color: #999;
     }
-
 }
 
 @media (max-width: 991px) {
@@ -91,6 +90,7 @@
     display: block;
     color: #999;
     font-size: 14px;
+    text-decoration: underline;
 }
 
 .b-get-offer {
@@ -127,16 +127,39 @@
     z-index: 99;
     border: 0;
     border-radius: 0;
+    @include mn768 {
+        display: block;
+    }
+    &[aria-expanded="true"] {
+        span {
+            position: relative;
+            &:first-child {
+                -webkit-transform: rotate(45deg);
+                -ms-transform: rotate(45deg);
+                transform: rotate(45deg);
+                top: 11px;
+                position: relative;
+            }
+            &:nth-child(2) {
+                opacity: 0;
+            }
+            &:last-child {
+                -webkit-transform: rotate(-45deg);
+                -ms-transform: rotate(-45deg);
+                transform: rotate(-45deg);
+                top: -11px;
+                position: relative;
+            }
+        }
+    }
     span {
         display: block;
         height: 5px;
         background-color: #000;
+        transition: all .5s 0s;
     }
     span+span {
         margin-top: 6px;
-    }
-    @include mn768 {
-        display: block;
     }
 }
 
