--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -5,6 +5,7 @@ body {
     min-width: 320px; // max-width: 1920px;
     // margin: 0 auto;
 }
+
 body.fullpage:not(.h_less600) {
     overflow: hidden;
 }
@@ -396,5 +397,22 @@ img {
         &:before {
             display: none;
         }
+    }
+}
+
+.b-widget-reviews {
+    margin: 30px 0;
+    padding: 30px 0;
+    border: 2px solid #e5e5e5;
+    border-left: 0;
+    border-right: 0;
+    &__title {
+        @extend .form-content__title;
+        margin-bottom: 30px;
+        text-align: center;
+    }
+    &__item {
+        width: 200px;
+            border: 1px solid #e5e5e5;
     }
 }
