--- a/css/main.css
+++ b/css/main.css
@@ -2386,6 +2386,92 @@ tbody.collapse.in {
 @media print {
   .hidden-print {
     display: none !important; } }
+/* Slider */
+.slick-slider {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
+  -webkit-tap-highlight-color: transparent; }
+
+.slick-list {
+  position: relative;
+  display: block;
+  overflow: hidden;
+  margin: 0;
+  padding: 0; }
+
+.slick-list:focus {
+  outline: none; }
+
+.slick-list.dragging {
+  cursor: pointer;
+  cursor: hand; }
+
+.slick-slider .slick-track,
+.slick-slider .slick-list {
+  -webkit-transform: translate3d(0, 0, 0);
+  -moz-transform: translate3d(0, 0, 0);
+  -ms-transform: translate3d(0, 0, 0);
+  -o-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0); }
+
+.slick-track {
+  position: relative;
+  top: 0;
+  left: 0;
+  display: block; }
+
+.slick-track:before,
+.slick-track:after {
+  display: table;
+  content: ''; }
+
+.slick-track:after {
+  clear: both; }
+
+.slick-loading .slick-track {
+  visibility: hidden; }
+
+.slick-slide {
+  display: none;
+  float: left;
+  height: 100%;
+  min-height: 1px; }
+
+[dir='rtl'] .slick-slide {
+  float: right; }
+
+.slick-slide img {
+  display: block; }
+
+.slick-slide.slick-loading img {
+  display: none; }
+
+.slick-slide.dragging img {
+  pointer-events: none; }
+
+.slick-initialized .slick-slide {
+  display: block; }
+
+.slick-loading .slick-slide {
+  visibility: hidden; }
+
+.slick-vertical .slick-slide {
+  display: block;
+  height: auto;
+  border: 1px solid transparent; }
+
+.slick-arrow.slick-hidden {
+  display: none; }
+
 .red {
   color: #f8615a; }
 
@@ -2615,7 +2701,7 @@ input[type=email] {
     background: white;
     box-shadow: 0px 0px 1px grey;
     margin: 0;
-    text-align: left;
+    text-align: center;
     text-transform: uppercase;
     font-size: 15px;
     font-weight: 700;
@@ -2667,7 +2753,8 @@ input[type=email] {
 .b-email {
   display: block;
   color: #999;
-  font-size: 14px; }
+  font-size: 14px;
+  text-decoration: underline; }
 
 .b-get-offer {
   display: block;
@@ -2700,15 +2787,32 @@ input[type=email] {
   z-index: 99;
   border: 0;
   border-radius: 0; }
-  .menu-btn span {
-    display: block;
-    height: 5px;
-    background-color: #000; }
-  .menu-btn span + span {
-    margin-top: 6px; }
   @media (min-width: 768px) {
     .menu-btn {
       display: block; } }
+  .menu-btn[aria-expanded="true"] span {
+    position: relative; }
+    .menu-btn[aria-expanded="true"] span:first-child {
+      -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      transform: rotate(45deg);
+      top: 11px;
+      position: relative; }
+    .menu-btn[aria-expanded="true"] span:nth-child(2) {
+      opacity: 0; }
+    .menu-btn[aria-expanded="true"] span:last-child {
+      -webkit-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+      top: -11px;
+      position: relative; }
+  .menu-btn span {
+    display: block;
+    height: 5px;
+    background-color: #000;
+    transition: all .5s 0s; }
+  .menu-btn span + span {
+    margin-top: 6px; }
 
 .admin-bar .menu-btn {
   top: 55px; }
@@ -3116,14 +3220,14 @@ div.wpcf7 .ajax-loader {
   text-align: center;
   clear: both;
   position: relative; }
-  .form-content__title {
+  .form-content__title, .b-widget-reviews__title {
     font-size: 20px;
     font-weight: 700;
     text-transform: uppercase;
     line-height: 1.2;
     text-align: center; }
     @media (min-width: 1200px) {
-      .form-content__title {
+      .form-content__title, .b-widget-reviews__title {
         text-align: left; } }
   .form-content__body {
     font-size: 14px;
@@ -3192,7 +3296,7 @@ div.wpcf7 .ajax-loader {
     @media (min-width: 1200px) {
       .form_addservice-archive .form-content .form__col {
         margin-right: 0; } }
-  .form_addservice-archive .form-content__title {
+  .form_addservice-archive .form-content__title, .form_addservice-archive .b-widget-reviews__title {
     display: none; }
   .form_addservice-archive .form-content__body {
     padding: 0; }
@@ -3772,6 +3876,19 @@ img {
     margin: 0; }
     .wpulike .wp_ulike_general_class .count-box:before {
       display: none; }
+
+.b-widget-reviews {
+  margin: 30px 0;
+  padding: 30px 0;
+  border: 2px solid #e5e5e5;
+  border-left: 0;
+  border-right: 0; }
+  .b-widget-reviews__title {
+    margin-bottom: 30px;
+    text-align: center; }
+  .b-widget-reviews__item {
+    width: 200px;
+    border: 1px solid #e5e5e5; }
 
 .content__inner_archive .content__title {
   text-align: center; }
@@ -4430,7 +4547,7 @@ img {
     padding-top: 10px; }
 
 @media (min-width: 1200px) {
-  .case__form .form-content__title {
+  .case__form .form-content__title, .case__form .b-widget-reviews__title {
     text-align: left; } }
 
 .slick-prev,
