--- a/css/_forms.scss
+++ b/css/_forms.scss
@@ -405,6 +405,7 @@ div.wpcf7 .ajax-loader {
     text-transform: uppercase;
     z-index: 1;
     display: none;
+    font-size: 20px;
     &__inner {
         position: relative;
         top: 50%;
@@ -413,13 +414,21 @@ div.wpcf7 .ajax-loader {
     &__title {
         color: $red;
         font-weight: 700;
-        font-size: 20px;
         margin-bottom: 10px;
     }
     &__subtitle {
-        font-size: 18px;
+        font-size: .8em;
         color: $darkgrey;
         padding: 0 10px;
+    }
+}
+
+.b-arch-content {
+    .form-sent-ok {
+        font-size: 12px;
+        &__title {
+            margin-bottom: 0;
+        }
     }
 }
 
