--- a/css/_page-all.scss
+++ b/css/_page-all.scss
@@ -56,10 +56,13 @@ hr.bold {
     bottom: 0;
     background: url('../img/icon-preload.gif') center no-repeat;
     z-index: 999;
+    opacity: 1;
+    display: none;
 }
 
 .layout-main {
-    opacity: 0;
+    // opacity: 0;
+    transition: opacity 1s 0s;
 }
 
 .breadcrumbs {
