--- a/css/_tpl-portfolio.scss
+++ b/css/_tpl-portfolio.scss
@@ -434,7 +434,7 @@ $chart-colors: ( 0: #b6b6b6,
     display: flex;
     justify-content: space-around;
     max-width: 500px;
-    margin: 20px auto;
+    margin: 20px auto 60px;
     padding: 0 20px 7px;
     /*
     &__before,
